# AIAutoWordPress

./: .env.example  .gitignore  Makefile  install.sh  pyproject.toml
.github/workflows/: ainap.yml  ci.yml
config/: settings.yaml  sources.yaml
config/prompts/: article_gen.txt
data/: ainap.db
docs/: DEPLOY.md
src/: __init__.py  __main__.py  config.py  database.py  generator.py  image_fetcher.py  main.py  notifier.py  publisher.py  quality.py  scraper.py
systemd/: ainap.service  ainap.timer
tests/: test_database.py  test_generator.py  test_publisher.py  test_scraper.py
